--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,17 @@ header {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-image: url(https://www.transparenttextures.com/patterns/black-thread.png);
-  background-color: #7f9c40;
+  background-image: url(https://www.transparenttextures.com/patterns/beige-paper.png);
+  background-color: rgb(232, 154, 11)
 }
 
+header div img{
+  margin-top: 120px;
+  width: 200px;
+  height: auto
+}
+
+
+header div h2{
+  margin-top: 0px;
+}
