--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -4,13 +4,22 @@ section {
   font-family: 'Bungee', 'sans-serif';
 
 }
+
+div.count{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
 output.counter {
+  font-family: Source Sans Pro;
   text-align: right;
 }
 
 button {
   padding: 0.2em 0.7em;
-  color: white;
+  color: #ebeaea;
   width: fit-content;
   background-color: rgb(15, 15, 228);
   border: none;
@@ -25,14 +34,35 @@ button {
     background-color: #f4f1ec;
     resize: none;
     width: 100%;
-    height: 33px;
+    height: 1.5em;
     font-family: 'Source Sans Pro', 'sans-serif';
   }
 
-  div.count {
+  
+  
+  div.error {
+    border: #FF0000 solid 1px;
+    background-color: #f2d6db;
+    color: #FF0000;
+    align-items: center;
+    font-size: 16px;
+    display: none;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    width: 100%;
   }
+  
+  
+  .err-child {
+    display: flex;
+    justify-content: center; 
+    flex-direction: row;
+  }
+
+  div.err-child i {
+    padding: none;
+  }
+
 
 
   
