--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,16 +1,13 @@
 section {
-  padding-left: 5%;
-  padding-right: 5%;
-  font-family: 'Bungee', 'sans-serif';
-
+  padding: 10% 5% 0% 5%;
+  font-family: "Bungee", "sans-serif";
 }
 
-div.count{
+div.count {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-
 
 output.counter {
   font-family: Source Sans Pro;
@@ -23,47 +20,34 @@ button {
   width: fit-content;
   background-color: rgb(15, 15, 228);
   border: none;
-  }
+}
 
+textarea {
+  display: inline-block;
+  outline: 0;
+  border-width: 0 0 2px;
+  border-color: blue;
+  background-color: #f4f1ec;
+  resize: none;
+  width: 100%;
+  height: 1.5em;
+  font-family: "Source Sans Pro", "sans-serif";
+}
 
-  textarea {
-    display: inline-block;
-    outline: 0;
-    border-width: 0 0 2px;
-    border-color: blue;
-    background-color: #f4f1ec;
-    resize: none;
-    width: 100%;
-    height: 1.5em;
-    font-family: 'Source Sans Pro', 'sans-serif';
-  }
+div.error {
+  border: #ff0000 solid 1px;
+  background-color: #f2d6db;
+  color: #ff0000;
+  align-items: center;
+  font-size: 16px;
+  display: none;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
 
-  
-  
-  div.error {
-    border: #FF0000 solid 1px;
-    background-color: #f2d6db;
-    color: #FF0000;
-    align-items: center;
-    font-size: 16px;
-    display: none;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  
-  .err-child {
-    display: flex;
-    justify-content: center; 
-    flex-direction: row;
-  }
-
-  div.err-child i {
-    padding: none;
-  }
-
-
-
-  
-  
+#err-msg {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
