--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,25 +1,22 @@
 
 article.tweet {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   border-style: solid;
   font-family: Source Sans Pro;
-  height: 200px;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  align-content: space-around;
   margin-bottom: 20px;
   box-shadow: 0px 3px 12px rgb(48, 45, 45);
   transition: all 300ms ease-in-out;
 }
 
 article.tweet:hover {
-  box-shadow: 0px 10px 40px;
-  height: 201px;
+  box-shadow: 0px 10px 10px;
 }
 
 article header {
   display: flex;
+  height: 30%;
   width: 92%;
   flex-direction: row;
   justify-content: space-between;
@@ -31,7 +28,8 @@ article header {
 article p {
   border-bottom: solid black;
   width: 94%;
-  margin-bottom: 1px;
+  height: 50%;
+  padding-bottom: 5%;
 }
 
 article header p {
@@ -46,13 +44,25 @@ article header p {
 article footer {
   display: flex;
   justify-content: space-between;
-  height: 3em;
+  height: 20%;
+  width: 92%;
   background-image: none;
   background-color: #f1f3e9;
-  width: 92%;
   font-size: 16px;
 }
 
-article footer span i:hover {
+footer div.icons {
+  display: flex;
+  flex-direction: row;
+  margin: 5%;
+}
+
+article footer div.icons i {
+  color: black;
+  padding-left: 0%;
+  padding-right: 20%;
+}
+
+article footer div.icons i:hover {
   color: rgb(172, 12, 12)
 }
