--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,3 +1,6 @@
+.tweet-container {
+  max-width: 80vw;
+}
 
 article.tweet {
   display: flex;
@@ -8,6 +11,7 @@ article.tweet {
   margin-bottom: 20px;
   box-shadow: 0px 3px 12px rgb(48, 45, 45);
   transition: all 300ms ease-in-out;
+  max-width: 700px;
 }
 
 article.tweet:hover {
@@ -22,14 +26,16 @@ article header {
   justify-content: space-between;
   height: 3em;
   background-image: none;
-  background-color: #f1f3e9
+  background-color: #f1f3e9;
 }
 
 article p {
+  display: inline-block;
   border-bottom: solid black;
   width: 94%;
   height: 50%;
   padding-bottom: 5%;
+  word-wrap: break-word;
 }
 
 article header p {
@@ -63,6 +69,10 @@ article footer div.icons i {
   padding-right: 20%;
 }
 
+.tweet-content {
+  overflow: hidden;
+}
+
 article footer div.icons i:hover {
-  color: rgb(172, 12, 12)
+  color: rgb(172, 12, 12);
 }
