--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -49,6 +49,11 @@ main > * {
   }
 }
 
+@media screen and (max-width: 1023px) {
+  nav {background-color: #e89a0b;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   body {
     max-height: 100vh;
