--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -10,7 +10,7 @@ div.count {
 }
 
 output.counter {
-  font-family: Source Sans Pro;
+ 
   text-align: right;
 }
 
@@ -25,12 +25,12 @@ button {
 textarea {
   display: inline-block;
   outline: 0;
-  border-width: 0 0 2px;
-  border-color: blue;
+  border-width: 0 0 3px;
+  border-color: #000020;
   background-color: #f4f1ec;
   resize: none;
   width: 100%;
-  height: 1.5em;
+  height: 4.5em;
   font-family: "Source Sans Pro", "sans-serif";
 }
 
@@ -50,4 +50,9 @@ div.error {
   display: flex;
   justify-content: center;
   flex-direction: row;
+}
+
+textarea::placeholder {
+  /* position: bottom; */
+  top: 70px;
 }
